Asset Browser: crash when linking/appending an asset made from a collection containing certain types of objects like a camera, a light... #91236

Closed
opened 2021-09-07 11:34:45 +02:00 by Lopo Isaac · 6 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: NVIDIA Quadro P5200/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 466.11

Blender Version
Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-09-06 16:56, hash: d7d8eb7de4

Caused by 5a9a16334c

Short description of error
Blender crashes when trying to drag to the viewport an asset made from a collection containing certain types of objects like a camera, a light, a lightprobe...
Hair objects, meshes, lattices and text objects work as expected, so I guess some objects work and other don't.

Exact steps for others to reproduce the error

  1. Put a camera, light or lightprobe in a collection.
  2. Mark that collection as an asset.
  3. Drag that asset to the viewport from the Asset Browser editor

crash_asset_browser_07-09-2021.blend

**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: NVIDIA Quadro P5200/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 466.11 **Blender Version** Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-09-06 16:56, hash: `d7d8eb7de4` Caused by 5a9a16334c **Short description of error** Blender crashes when trying to drag to the viewport an asset made from a collection containing certain types of objects like a camera, a light, a lightprobe... Hair objects, meshes, lattices and text objects work as expected, so I guess some objects work and other don't. **Exact steps for others to reproduce the error** 1. Put a camera, light or lightprobe in a collection. 2. Mark that collection as an asset. 3. Drag that asset to the viewport from the Asset Browser editor [crash_asset_browser_07-09-2021.blend](https://archive.blender.org/developer/F10382408/crash_asset_browser_07-09-2021.blend)
Author

Added subscriber: @lowpolysaac

Added subscriber: @lowpolysaac
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Philipp Oeser self-assigned this 2021-09-07 11:40:42 +02:00
Member

Can confirm, will check.

Can confirm, will check.

This issue was referenced by 2b4afcbb4c

This issue was referenced by 2b4afcbb4cdc231aebe343cd444d001b9f191204
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#91236
No description provided.